# CosLab-SHU-DeviceTemplate

./: pyproject.toml
CosLab_SHU_Device_package/devices/bronkhorst_el_flow/: bronkhorst_el_flow.py  bronkhorst_el_flow.yaml  graph_example_bronkhorst_el_flow.json
CosLab_SHU_Device_package/devices/chi760e/: chi760e.py  chi760e.yaml  graph_example_chi760e.json
CosLab_SHU_Device_package/devices/cmos_detector/: cmos_detector.py  cmos_detector.yaml  graph_example_cmos_detector.json
CosLab_SHU_Device_package/devices/cni_laser_msl_u_532/: cni_laser_msl_u_532.py  cni_laser_msl_u_532.yaml  graph_example_cni_laser_msl_u_532.json
CosLab_SHU_Device_package/devices/daheng_gci060505/: daheng_gci060505.py  daheng_gci060505.yaml  graph_example_daheng_gci060505.json
CosLab_SHU_Device_package/devices/daheng_hd_r630c/: daheng_hd_r630c.py  daheng_hd_r630c.yaml  graph_example_daheng_hd_r630c.json
CosLab_SHU_Device_package/devices/dhjf_circulation_bath/: dhjf_circulation_bath.py  dhjf_circulation_bath.yaml
CosLab_SHU_Device_package/devices/duco_gcr5/: duco_gcr5.py  duco_gcr5.yaml  graph_example_duco_gcr5.json
CosLab_SHU_Device_package/devices/electrolytic_cell_gripper/: electrolytic_cell_gripper.py  electrolytic_cell_gripper.yaml  (+1 more)
CosLab_SHU_Device_package/机械臂_duco_gcr5/: duco_gcr5.yaml
CosLab_SHU_Device_package/模拟量控制器_hk_a0/: hk_a0.py
CosLab_SHU_Device_package/注射泵_runze_sy03b_t08/: runze_sy03b_t08.py
CosLab_SHU_Device_package/温度计_jyhsm_temperature_transmitter/: graph_example_jyhsm_temperature_transmitter.json
CosLab_SHU_Device_package/蠕动泵_longer_bt100/: longer_bt100.py
(+26 files in other folders)
