[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CosLab_SHU_Device_package"
version = "0.1.0"
description = "上海大学MGI-Coslab设备仓库"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "rich",
]

[project.optional-dependencies]
dev = [
    "unilabos",
]

[tool.setuptools.packages.find]
include = ["device_package_example*"]
